# bc_dauntless

./: .gitignore  App.py  CLAUDE.md  CMakeLists.txt  LoadBridge.py  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  strop.py
native/: CMakeLists.txt
native/assets/ui/: components.rcss  hud.rcss
native/assets/ui-cef/: hello.html  index.html  ship_status.html
native/assets/ui-cef/css/: ai_inspector.css  character_tooltip.css  configuration_panel.css  crew_menus.css  engineering_power.css  global.css  hello.css  info_box.css  quick_battle_setup.css  reticle_text.css  sdk_mirror.css  sensors.css  ship_property_viewer.css  target_list.css
native/assets/ui-cef/js/: ai_inspector.js  character_tooltip.js  configuration_panel.js  crew_menus.js  developer_options.js  engineering_power.js  info_box.js  mission_picker.js  pause_menu.js  quick_battle_setup.js  reticle_text.js  sdk_mirror.js  sensors.js  setting_course_panel.js  ship_property_viewer.js  target_list.js
native/src/assets/: CMakeLists.txt
native/src/assets/docs/: deferred_work.md
native/src/assets/src/: animation_build.cc  animation_load.cc  cache.cc  crushability_bake.cc  flip_frame.cc  material_build.cc  material_build.h  mesh_bake.cc  mesh_bake.h  mesh_build.cc  mesh_build.h  mesh_upload.cc  model_build.cc  model_build.h  model_compose.cc  path_resolver.cc  pose_sample.cc  skeleton_build.cc  skeleton_build.h  skin_weights.cc  skin_weights.h  tessellate.cc  texture_decode.cc
native/src/audio/: CMakeLists.txt
native/src/audio/src/: audio_system.cc  mp3.cc  null_backend.cc  openal_backend.cc  python_binding.cc  wav.cc
native/src/host/: CMakeLists.txt  developer_mode.cc  developer_mode.h  host_bindings.cc  host_bindings.h  host_main.cc
native/src/host/docs/: deferred_work.md
native/src/nif/: CMakeLists.txt
native/src/nif/docs/: canonical_dump_format.md  v1_block_manifest.md
native/src/nif/src/: dispatch.cc  dispatch.h  file.cc  header.cc  header.h  reader.cc  reader.h  resolver.cc  resolver.h  scene_camera.cc
native/src/renderer/: CMakeLists.txt  aabb.cc  animation_update.cc  area_tex.h  backdrop_pass.cc  bloom_pass.cc  bone_palette.cc  breach_debris.cc  breach_pass.cc  breach_venting.cc  bridge_node_anim_store.cc  bridge_pass.cc  carve_field_cache.cc  channel_binder.cc  cloak_pass.cc  cube_mesh.cc  cube_mesh.h  cubemap_target.cc  debris_chunks.cc  debris_chunks.h  debris_pass.cc  debug_volume_pass.cc  dust_pass.cc  dynamic_lights.cc  filmic_pass.cc  frame.cc  fxaa_pass.cc  gl_caps.cc  glow_region.cc  hdr_target.cc  hit_vfx_pass.cc  hologram_pass.cc  hull_discharge_pass.cc  ldr_target.cc  lens_flare_hdr_pass.cc  lens_flare_pass.cc  letterbox_pass.cc  light_matrix.cc  motion_blur_pass.cc  nacelle_region.cc  (+27 more)
native/src/renderer/shaders/: backdrop.frag  backdrop.vert  bloom_down.frag  bloom_prefilter.frag  bloom_up.frag  breach.frag  breach.vert  bridge.frag  bridge.vert  cloak_refraction.frag  cloak_refraction.vert  debris.frag  debris.vert  disruptor.frag  disruptor.vert  dust.frag  dust.vert  filmic.frag  fxaa.frag  fxaa.vert  hit_vfx.frag  nebula.frag  (+59 more)
native/src/scenegraph/: CMakeLists.txt
native/src/ui/: CMakeLists.txt  HudDocument.cc  PanelDocument.cc  UiSystem.cc
native/src/ui_cef/: CMakeLists.txt  cef_app.cc  cef_app.h  cef_client.cc  cef_client.h  cef_composite_pass.cc  cef_composite_pass.h  cef_lifecycle.cc  cef_lifecycle.h  cef_macos_app.h  cef_macos_app.mm
native/src/voxel/: CMakeLists.txt
native/tests/: CMakeLists.txt
native/tests/assets/: CMakeLists.txt
native/tests/audio/: CMakeLists.txt  audio_system_test.cc  mp3_test.cc  null_backend_test.cc  wav_test.cc
native/tests/nif/: animation_parse_test.cc  canonical_dump.cc  canonical_dump.h  error_test.cc  header_test.cc  header_unit_test.cc  legacy_rng_test.cc  ni_node_test.cc  ni_tri_shape_test.cc  reader_test.cc  resolver_test.cc  sample_paths.h  sanity_test.cc  scene_camera_test.cc  ship_gate_test.cc  types_test.cc  voxel_data_test.cc
native/tests/renderer/: CMakeLists.txt  aabb_test.cc  animation_update_test.cc  asset_path_test.cc  backdrop_pass_test.cc  bloom_pass_test.cc  bone_palette_test.cc  breach_debris_test.cc  breach_pass_test.cc  breach_venting_test.cc  bridge_node_anim_store_test.cc  bridge_pass_test.cc  channel_binder_assets_test.cc  channel_binder_test.cc  comm_pass_test.cc  cubemap_target_test.cc  debris_chunks_test.cc  debris_pass_test.cc  deform_pipeline_test.cc  dust_pass_test.cc  dynamic_lights_test.cc  filmic_pass_test.cc  frame_test.cc  gl_caps_test.cc  glow_region_test.cc  gouge_shading_test.cc  hdr_target_test.cc  head_weld_seam_test.cc  hit_vfx_pass_test.cc  hull_clip_test.cc  lens_flare_pass_test.cc  letterbox_pass_test.cc  light_matrix_test.cc  lighting_test.cc  motion_blur_pass_test.cc  nacelle_region_test.cc  node_anim_test.cc  officer_jaw_test.cc  particle_math_test.cc  particle_pass_test.cc  (+19 more)
native/tests/scenegraph/: CMakeLists.txt  breach_events_test.cc  damage_decals_test.cc  hull_carve_test.cc  hull_craters_test.cc  world_test.cc
native/tests/voxel/: CMakeLists.txt  decode_test.cc  dual_contour_test.cc  iou_realdata_test.cc  iou_test.cc  plane_index_test.cc  select_breach_voxels_test.cc  source_cache_test.cc  surface_decode_test.cc  volume_test.cc  voxelize_test.cc
native/tools/dump_bridge_assets/: CMakeLists.txt  dump_bridge_assets.cc
native/tools/dump_nif_tree/: CMakeLists.txt  dump_nif_tree.cc
native/tools/inspect_flip/: CMakeLists.txt  inspect_flip.cc
native/tools/inspect_tex_props/: CMakeLists.txt  inspect_tex_props.cc
native/tools/probe_animation_keys/: CMakeLists.txt  probe_animation_keys.cc
native/tools/probe_block_inventory/: CMakeLists.txt  probe_block_inventory.cc
native/tools/probe_bound_radius/: CMakeLists.txt  probe_bound_radius.cc
native/tools/probe_officer_pose/: CMakeLists.txt  probe_officer_pose.cc
native/tools/probe_texture_stages/: CMakeLists.txt  probe_texture_stages.cc
native/tools/recover_lip_visemes/: CMakeLists.txt  recover_lip_visemes.cc
native/tools/scan_nifs/: CMakeLists.txt  scan_nifs.cc
native/tools/voxel_inspect/: CMakeLists.txt  main.cc
(+1736 files in other folders)
